Minor cleanup of code. No change to functionality.